# AriesGames

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  proto_configs.json  proto_generate.py
tools/protoc/: version.txt
